# rusty2048

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  package.json  run.sh  vercel.json
.github/workflows/: ci.yml  quick-check.yml  release.yml
cli/: Cargo.toml  test_stats.md
cli/replays/: README.md
cli/src/: charts.rs  language.rs  main.rs  replay.rs  theme.rs
core/: Cargo.toml
core/src/: ai.rs  board.rs  error.rs  game.rs  lib.rs  replay.rs  rng.rs  score.rs  stats.rs
desktop/: Cargo.toml  README.md  build.sh  tauri.conf.json
desktop/frontend/: index.html
desktop/src/: main.rs
docs/: ACTIONS.md  BUILD_GUIDE.md  DOCS.md  FEATURES.md  README.md  THEMES.md  multi_language_test_guide.md
scripts/: ci-publish.sh  install.sh  publish.sh  setup-homebrew-tap.sh
shared/: Cargo.toml
shared/src/: i18n.rs  lib.rs
web/: Cargo.toml  README.md  build.sh  index.html  package-lock.json  package.json  vercel.json  vite.config.js
web/dev-dist/: sw.js
web/js/: main.js
web/public/pkg/: package.json  rusty2048_web.d.ts  rusty2048_web.js  rusty2048_web_bg.wasm  rusty2048_web_bg.wasm.d.ts
web/src/: canvas.js  game-animation.js  game-core.js  game-event.js  game-storage.js  game-ui.js  game.js  lib.rs  main.js  style.css
web/src/css/: animations.css  base.css  controls.css  game-ui.css  layout.css  main.css  modals.css  responsive.css  side-menu.css
web/src/js/: game-canvas.js  game-event.js  game-storage.js  game-ui.js  renderer.worker.js
