[workspace]
members = [
    "core",
    "cli", 
    "web",
    "desktop",
    "shared"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern 2048 game implementation in Rust"
license = "MIT"
repository = "https://github.com/yourusername/rusty2048"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"
getrandom = "0.2"

# CLI dependencies
crossterm = "0.27"
ratatui = "0.26"
tracing = "0.1"
tracing-subscriber = "0.3"

# Web dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
gloo-timers = "0.3"

# Desktop dependencies
tauri = { version = "1.5", features = ["shell-open"] }

# Testing
proptest = "1.4"
criterion = "0.5"
