[package]
name = "rusty2048-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core game logic for Rusty2048 - A modern 2048 game implementation with AI, scoring, and replay system"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rand.workspace = true
getrandom.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
