[package]
name = "rusty2048-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Desktop application for Rusty2048"
license.workspace = true
repository.workspace = true

[dependencies]
rusty2048-core = { path = "../core" }
rusty2048-shared = { path = "../shared" }
tauri = { version = "2.0.0-alpha.12", features = [] }
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.12", features = [] }
