[package]
name = "rusty2048-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Web interface for Rusty2048"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rusty2048-core = { path = "../core" }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys.workspace = true
gloo-timers.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
