[package]
name = "rusty2048-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Web interface for Rusty2048"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rusty2048-core = { path = "../core" }
rusty2048-shared = { path = "../shared" }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys = { version = "0.3", features = ["console", "Window", "Navigator"] }
gloo-timers.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
